[package]
name = "azure_email_checker"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "azure_email_checker"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
regex = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
colored = "2.0"
csv = "1.3.0"
