[package]
name = "azure_email_checker"
version = "0.1.1"
authors = ["boring <boringthegod@tutanota.com>"]
edition = "2021"
description = "Tool written in Rust to enumerate the valid email addresses of an Azure/Office 365 Tenant"
repository = "https://github.com/boringthegod/AzureEmailChecker"
readme = "README.md"
license = "GNU General Public License v3.0"

[[bin]]
name = "azure_email_checker"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
regex = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
colored = "2.0"
csv = "1.3.0"
